[gd_scene load_steps=14 format=3 uid="uid://b67ugsto1dwat"]

[ext_resource type="Texture2D" uid="uid://dsepjiedhjgu8" path="res://assets/entity/enemy/Individual Sprites/slime-idle-0.png" id="1_8xlog"]
[ext_resource type="Script" path="res://enemy.gd" id="1_x812i"]
[ext_resource type="Texture2D" uid="uid://c5h8d1lym1u08" path="res://assets/entity/enemy/Individual Sprites/slime-idle-1.png" id="2_ohbmt"]
[ext_resource type="Texture2D" uid="uid://bb0j5s6fkc8ep" path="res://assets/entity/enemy/Individual Sprites/slime-idle-2.png" id="3_80u38"]
[ext_resource type="Texture2D" uid="uid://bv2ct6yj03pox" path="res://assets/entity/enemy/Individual Sprites/slime-idle-3.png" id="4_f2mpt"]
[ext_resource type="Texture2D" uid="uid://bp8v2vexipkqy" path="res://assets/entity/enemy/Individual Sprites/slime-move-0.png" id="5_tjath"]
[ext_resource type="Texture2D" uid="uid://cp2q4h86gofdv" path="res://assets/entity/enemy/Individual Sprites/slime-move-1.png" id="6_thlgt"]
[ext_resource type="Texture2D" uid="uid://boe8ic2asknj5" path="res://assets/entity/enemy/Individual Sprites/slime-move-2.png" id="7_px8fx"]
[ext_resource type="Texture2D" uid="uid://d4m10cjxwn4su" path="res://assets/entity/enemy/Individual Sprites/slime-move-3.png" id="8_24xyy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8f0o2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8xlog")
}, {
"duration": 1.0,
"texture": ExtResource("2_ohbmt")
}, {
"duration": 1.0,
"texture": ExtResource("3_80u38")
}, {
"duration": 1.0,
"texture": ExtResource("4_f2mpt")
}],
"loop": true,
"name": &"enemyIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_tjath")
}, {
"duration": 1.0,
"texture": ExtResource("6_thlgt")
}, {
"duration": 1.0,
"texture": ExtResource("7_px8fx")
}, {
"duration": 1.0,
"texture": ExtResource("8_24xyy")
}],
"loop": true,
"name": &"enemyMove",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wf28"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6176"]
size = Vector2(22, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_c0dpi"]
radius = 61.0737

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_x812i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8f0o2")
animation = &"enemyMove"
autoplay = "enemyIdle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
shape = SubResource("RectangleShape2D_1wf28")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 5.5)
shape = SubResource("RectangleShape2D_u6176")

[node name="Sight" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="SightArea" type="CollisionShape2D" parent="Sight"]
position = Vector2(-1, 6)
shape = SubResource("CircleShape2D_c0dpi")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
